--- a/index.html
+++ b/index.html
@@ -427,12 +427,14 @@ Drag Conveyor
 <input type="checkbox" id="nodc4" name="nodc4" value="nodc4">
 <label for="nodc4"> No</label></div>
 
+<!--
 <div style="float:left"> TruDry Settings Correct:</div>
 <div style="margin-left: 39%"> 
 <input type="checkbox" id="yesdc5" name="yesdc5" value="yesdc5">
 <label for="yesdc5"> Yes</label>&nbsp&nbsp
 <input type="checkbox" id="nodc5" name="nodc5" value="nodc5">
 <label for="nodc5"> No</label></div>
+-->
 
 <div style="float:left"> AccuDry Settings Correct:</div>
 <div style="margin-left: 39%"> 
@@ -448,12 +450,14 @@ Drag Conveyor
 <input type="checkbox" id="nodc7" name="nodc7" value="nodc7">
 <label for="nodc7"> No</label></div>
 
+<!--
 <div style="float:left"> Burner Settings Correct:</div>
 <div style="margin-left: 39%"> 
 <input type="checkbox" id="yesdc8" name="yesdc8" value="yesdc8">
 <label for="yesdc8"> Yes</label>&nbsp&nbsp
 <input type="checkbox" id="No" name="No" value="No">
 <label for="No"> No</label></div>
+-->
 
 <div style="float:left"> HMI Settings Correct:</div>
 <div style="margin-left: 39%"> 
@@ -563,50 +567,52 @@ Drag Conveyor
 
 <div style="float:left"> Fan Settings: </div>
 <div style="margin-left: 39%"> 
-<input type="checkbox" id="presentsss1" name="presentsss1" value="presentsss1">
-<label for="presentsss1"> Present</label>&nbsp&nbsp
+<!--<input type="checkbox" id="presentsss1" name="presentsss1" value="presentsss1">
+<label for="presentsss1"> Present</label>&nbsp&nbsp-->
 <input type="checkbox" id="configuredsss1" name="configuredsss1" value="configuredsss1">
 <label for="configuredsss1"> Configured</label>&nbsp&nbsp</div>
 
 <div style="float:left"> Grain Fill Settings: </div>
 <div style="margin-left: 39%"> 
-<input type="checkbox" id="presentsss2" name="presentsss2" value="presentsss2">
-<label for="presentsss2"> Present</label>&nbsp&nbsp
+<!--<input type="checkbox" id="presentsss2" name="presentsss2" value="presentsss2">
+<label for="presentsss2"> Present</label>&nbsp&nbsp-->
 <input type="checkbox" id="configuredsss2" name="configuredsss2" value="configuredsss2">
 <label for="configuredsss2"> Configured</label>&nbsp&nbsp</div>
 
 <div style="float:left"> Burner Settings: </div>
 <div style="margin-left: 39%"> 
-<input type="checkbox" id="presentsss3" name="presentsss3" value="presentsss3">
-<label for="presentsss3"> Present</label>&nbsp&nbsp
+<!--<input type="checkbox" id="presentsss3" name="presentsss3" value="presentsss3">
+<label for="presentsss3"> Present</label>&nbsp&nbsp-->
 <input type="checkbox" id="configuredsss3" name="configuredsss3" value="configuredsss3">
 <label for="configuredsss3"> Configured</label>&nbsp&nbsp</div>
 
 <div style="float:left"> Takeaway Settings: </div>
 <div style="margin-left: 39%"> 
-<input type="checkbox" id="presentsss4" name="presentsss4" value="presentsss4">
-<label for="presentsss4"> Present</label>&nbsp&nbsp
+<!--<input type="checkbox" id="presentsss4" name="presentsss4" value="presentsss4">
+<label for="presentsss4"> Present</label>&nbsp&nbsp-->
 <input type="checkbox" id="configuredsss4" name="configuredsss4" value="configuredsss4">
 <label for="configuredsss4"> Configured</label>&nbsp&nbsp</div>
 
 <div style="float:left"> Moisture Settings: </div>
 <div style="margin-left: 39%"> 
-<input type="checkbox" id="presentsss5" name="presentsss5" value="presentsss5">
-<label for="presentsss5"> Present</label>&nbsp&nbsp
+<!--<input type="checkbox" id="presentsss5" name="presentsss5" value="presentsss5">
+<label for="presentsss5"> Present</label>&nbsp&nbsp-->
 <input type="checkbox" id="configuredsss5" name="configuredsss5" value="configuredsss5">
 <label for="configuredsss5"> Configured</label>&nbsp&nbsp</div>
 
+<!--	
 <div style="float:left"> TruDry Settings: </div>
 <div style="margin-left: 39%"> 
 <input type="checkbox" id="presentsss6" name="presentsss6" value="presentsss6">
 <label for="presentsss6"> Present</label>&nbsp&nbsp
 <input type="checkbox" id="configuredsss6" name="configuredsss6" value="configuredsss6">
 <label for="configuredsss6"> Configured</label>&nbsp&nbsp</div>
+-->
 
 <div style="float:left"> AccuDry Settings: </div>
 <div style="margin-left: 39%"> 
-<input type="checkbox" id="presentsss7" name="presentsss7" value="presentsss7">
-<label for="presentsss7"> Present</label>&nbsp&nbsp
+<!--<input type="checkbox" id="presentsss7" name="presentsss7" value="presentsss7">
+<label for="presentsss7"> Present</label>&nbsp&nbsp-->
 <input type="checkbox" id="configuredsss7" name="configuredsss7" value="configuredsss7">
 <label for="configuredsss7"> Configured</label>&nbsp&nbsp</div>
 
